@@ -95,6 +95,8 @@ PP/03 Implement SSL-on-connect outbound with protocol=smtps on smtp transport.
       Heavily based on revision 40f9a89a from Simon Arlott's tree.
       Bugzilla 97.
 
+PP/04 Use .dylib instead of .so for dynamic library loading on MacOS.
+
 
 Exim version 4.76
 -----------------
